# taskmanagement

./: README.md
backend/: pyproject.toml  taskboard.db
backend/app/: main.py
backend/app/core/: auth.py  clerk.py  database.py
backend/app/models/: task.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
